plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.2'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'az.bank'
version = '0.0.1-SNAPSHOT'
description = 'payment-system'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

//java {
//    sourceCompatibility = JavaVersion.VERSION_21
//    targetCompatibility = JavaVersion.VERSION_21
//}
//
//tasks.withType(JavaCompile).configureEach {
//    options.compilerArgs += ['--enable-preview']
//}
//
//tasks.withType(Test).configureEach {
//    jvmArgs += ['--enable-preview']
//}
//
//bootRun {
//    jvmArgs = ['--enable-preview']
//}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
//    implementation 'org.liquibase:liquibase-core:5.0.1'
//    implementation 'org.springframework.boot:spring-boot-starter-liquibase'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    implementation 'net.javacrumbs.shedlock:shedlock-spring:6.0.2'
    implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:6.0.2'
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

}

tasks.named('test') {
    useJUnitPlatform()
}
